# tmpl-cli

./: .gitignore  Cargo.toml  README.md  Zargo.toml  cargo.toml
.tmpl-cli/: data.json
src/: cache.rs  cli.rs  errors.rs  git.rs  main.rs  original.rs  template.rs  utils.rs
