[package]
name = "tmpl-cli"
version = "0.4.0"
edition = "2021"
description = "Template CLI"
license = "MIT"
repository = "https://github.com/ryanuo/tmpl-cli"
homepage = "https://ryanuo.cc"
authors = ["Ryanuo <ryanuo@aliyun.com>"]

[dependencies]
clap = "4.1"
git2 = "0.20.1"
dialoguer = "0.11"
tempfile = "3.19.1"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0.0"
indicatif = "0.17.11"
dirs = "6.0.0"
reqwest = { version = "0.11", features = ["blocking"] }